[package]
name = "dyn-timeout"
authors = ["Adrien ZINGER"]
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/adrien-zinger/dyn-timeout"
description = "Dynamic timeout, cancel, add and remove time before a callback execution"
keywords = ["tokio", "raft", "timeout", "timer", "cancellable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
anyhow = "1"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
lazy_static = "1"